--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <i class="fab fa-linkedin social-icon"></i>
             <h3>LinkedIn</h3>
             <a
-              href="www.linkedin.com/in/mukesh-bhuriya"
+              href="https://www.linkedin.com/in/mukesh-bhuriya"
               target="_blank"
               class="social-link"
             >
