--- a/index.html
+++ b/index.html
@@ -158,14 +158,15 @@
         <div class="skills-grid" data-aos="fade-up">
           <!-- Frontend Skills -->
           <div><i class="fab fa-react"></i> React</div>
+          <div><i class="fab fa-node"></i> Node.js</div>
+          <div><i class="fas fa-server"></i> Express.js</div>
+          <div><i class="fab fa-react"></i> React Native</div>
           <div><i class="fab fa-js"></i> JavaScript</div>
           <div><i class="fab fa-js"></i> TypeScript</div>
-          <div><i class="fab fa-react"></i> React Native</div>
           <div><i class="fab fa-css3-alt"></i> CSS3</div>
           <div><i class="fab fa-html5"></i> HTML5</div>
 
           <!-- Backend Skills -->
-          <div><i class="fab fa-node"></i> Node.js</div>
           <div><i class="fas fa-server"></i> Flask</div>
           <div><i class="fas fa-server"></i> Python</div>
           <div><i class="fas fa-database"></i> MySQL</div>
