--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
           <!-- Tools & DevOps -->
           <div><i class="fab fa-docker"></i> Docker</div>
+          <div><i class="fab fa-fire"></i> Firebase</div>
           <div><i class="fas fa-server"></i> Jenkins</div>
           <div><i class="fab fa-git-alt"></i> Git</div>
           <div><i class="fas fa-network-wired"></i> MobaXterm</div>
